--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 			height: 150px;
 			margin-top: 50px;
 			transform-style: preserve-3d;
-			animation: spin 4s linear infinite;
 		}
 
 		/* Each ring is a circular orbit line */
@@ -45,32 +44,54 @@
 			left: 50%;
 			transform-style: preserve-3d;
 			transform: translate(-50%, -50%);
-			width: 120px;
-			height: 120px;
+			width: 150px;
+			height: 150px;
 			border-radius: 50%;
-			border: 4px solid #333; /* Thicker and darker for visibility */
+			border: 6px solid #333; /* Thicker and darker for visibility */
 			opacity: 0.8;
 		}
 
-		/* You can create multiple rings, each rotated differently */
+		/* Independent rotations */
 		.loader .ring:nth-child(1) {
-			transform: translate(-50%, -50%) rotateX(var(--xturns)) rotateY(var(--yturns));
+			animation: rotatePlane1 7s linear infinite;
+			border-color: #333;
 		}
+
 		.loader .ring:nth-child(2) {
-			transform: translate(-50%, -50%) rotateX(calc(var(--xturns) * -1)) rotateY(var(--yturns));
-			border-color: #555; /* Slightly different shade for variety */
+			animation: rotatePlane2 6s linear infinite;
+			border-color: #555;
 		}
+
 		.loader .ring:nth-child(3) {
-			transform: translate(-50%, -50%) rotateX(var(--xturns)) rotateY(calc(var(--yturns) * -1));
+			animation: rotatePlane3 8s linear infinite;
 			border-color: #777;
 		}
 
-		@keyframes spin {
+		/* Animations for independent planes */
+		@keyframes rotatePlane1 {
 			0% {
-				transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+				transform: translate(-50%, -50%) rotateX(0deg) rotateY(0deg);
 			}
 			100% {
-				transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+				transform: translate(-50%, -50%) rotateX(360deg) rotateY(360deg);
+			}
+		}
+
+		@keyframes rotatePlane2 {
+			0% {
+				transform: translate(-50%, -50%) rotateX(0deg) rotateZ(0deg);
+			}
+			100% {
+				transform: translate(-50%, -50%) rotateX(360deg) rotateZ(360deg);
+			}
+		}
+
+		@keyframes rotatePlane3 {
+			0% {
+				transform: translate(-50%, -50%) rotateY(0deg) rotateZ(0deg);
+			}
+			100% {
+				transform: translate(-50%, -50%) rotateY(360deg) rotateZ(360deg);
 			}
 		}
 	</style>
@@ -84,18 +105,5 @@
 		<div class="ring"></div>
 		<div class="ring"></div>
 	</div>
-
-	<script>
-		// Select the loader element
-		const loader = document.querySelector('.loader');
-
-		// Generate random rotation turns for x and y to create a random orbital plane.
-		const randomX = (Math.random() * 2 - 1); // random between -1 and 1
-		const randomY = (Math.random() * 2 - 1);
-
-		// Set the random variables on the loader element
-		loader.style.setProperty('--xturns', `${randomX}turn`);
-		loader.style.setProperty('--yturns', `${randomY}turn`);
-	</script>
 </body>
 </html>
